# optical_neural_network

./: CMakeLists.txt  Project layout.txt  csv_loader.hpp  kernels.cu  optical_model.cu  optical_model.hpp  optical_neural_network_paper.md  optical_neural_network_visualizations.html  research_package_summary.md  technical_appendix.md  training.cpp  training.hpp  utils.cpp  utils.hpp
MODEL/: Project_layout.md  csv_loader.cpp  main.cpp  run_training.bat  submission77.csv
